1. modified code for correct alignment of tables in review module

--- a/xCheckStudio/Webviewer/CSS/ViewStyle.css
+++ b/xCheckStudio/Webviewer/CSS/ViewStyle.css
@@ -18,11 +18,8 @@ body {
 }
 
 .example-canvas-tiny {
-    /* width: 550px;
-    height: 270px; */
     position: relative;
     border: 1px solid gray;
-    margin: auto;
 }
 
 .example-div-block{
